# cmake_learn

./: CMakeLists.txt  README.md  main.cpp
external_projects/: CMakeLists.txt
external_projects/CompressLogFile/: CMakeLists.txt  main.cpp
external_projects/ExtractInfoFromFiles/: CMakeLists.txt  README.md  main.cpp
external_projects/FilterUnusedImages/: CMakeLists.txt  main.cpp
external_projects/RecurseDir/: CMakeLists.txt  README.md  main.cpp
external_projects/ReplaceImageByImages/: CMakeLists.txt  main.cpp
external_projects/ReplacePieceByImages/: CMakeLists.txt  README.md  main.cpp
external_projects/formatLogFile/: main.cpp
include/: CMakeLists.txt
include/math/: sub.h
lib_source_code/: CMakeLists.txt  add.cpp  add.h
src/: CMakeLists.txt  Lambda.cpp  ProducerAndConsumer.cpp  main.cpp
src/math/: CMakeLists.txt  sub.cpp
